fixing random buddies alignment on mobile

--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ body {
 	border-radius: 10px;
 	position: relative;
 	background-color: #1e1e1e;
-    top: -200px;
+	top: -200px;
 	left: -20px;
 	width:250px;
 	max-width:250px;
@@ -50,7 +50,7 @@ body {
 .pp {
 	border-radius: 10px;
 	position: relative;
-    top: 25px;
+	top: 25px;
 	left: 25px;
 	width:200px;
 	max-width:200px;
@@ -74,14 +74,14 @@ h1 {
 }
 
 .gallery {
-    display: flex;
-    flex-wrap: wrap;
+	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 }
 
 .image-container {
-    margin: 10px;
-    cursor: pointer;
+	margin: 10px;
+	cursor: pointer;
 	text-align: center;
 	justify-content: center;
 	display: inline-block;
@@ -92,7 +92,7 @@ h1 {
 }
 
 .image-container img {
-    max-width: 100%;
+	max-width: 100%;
 	border-radius: 5px;
 	transition: transform 0.2s;
 }
@@ -165,6 +165,20 @@ p {
 	font-size: 20px;
 }
 
+.buddies-gallery {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+@media only screen and (max-width: 1000px)
+{
+	.buddies-gallery {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
 .buddiesPP {
 	text-align: center;
 }
@@ -214,7 +228,7 @@ p {
 	vertical-align: top;
 	text-align: left;
 	padding: 10px;
-  	display: inline-block;
+	display: inline-block;
 }
 
 @media only screen and (max-width: 1000px)
@@ -225,21 +239,21 @@ p {
 }
 
 a {
-  	text-decoration: none;
-  	transition: color 0.2s ease, text-decoration 0.2s ease;
+	text-decoration: none;
+	transition: color 0.2s ease, text-decoration 0.2s ease;
 }
 
 a:link {
-  	color: #007bff;
+	color: #007bff;
 }
 
 a:visited {
-  	color: #8a2be2;
+	color: #8a2be2;
 }
 
 a:hover {
-  	color: #ff4500;
-  	text-decoration: underline;
+	color: #ff4500;
+	text-decoration: underline;
 }
 
 .linkcopy {
